--- a/project/package.json
+++ b/project/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "headlessui": "^0.0.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.18.0",
     "next": "15.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
